<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kickr</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter username</string>
    <string name="button_send">Login</string>
    <string name="overflow">Overflow</string>
    <string name="password">Password</string>
    <string name="settings">Settings</string>
    <string name="timer">Matches</string>
    <string name="favourites">Favourites</string>
    <string name="info">Information</string>
    <string name="login">Login</string>
    <string name="createMatch">Create Match</string>
    <string name="createTeam">Create Team</string>
    <string name="referee">Referee</string>
    <string name="venue">Venue</string>
    <string name="comp">Competition</string>
    <string name="livematches">Live Matches</string>
    <string name="enterPlayers">Enter Players</string>
    <string name="goalie">Goalkeeper</string>
    <string name="rcb">Right Corner Back</string>
    <string name="rwf">Right Wing Forward</string>
    <string name="ff">Full Forward</string>
    <string name="mf">Midfield</string>
    <string name="title_activity_attendee">Kickr</string>
    <string name="title_activity_match_updates">Kickr</string>
    <string name="title_activity_favourites">Kickr</string>
    <string name="title_activity_players">Kickr</string>
    <string name="title_activity_teamplayers">Kickr</string>
    <string name="start">Start Match</string>
    <string name="timerVal">00:00:00</string>
    <string name="resetButtonLabel">Reset</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="players">Players</string>
    <string name="fixtures">Fixtures</string>
    <string name="fixtureInfo">Fixture Information</string>
    <string name="matchId">Fixture ID</string>
    <string name="managers">Managers</string>
    <string name="matchDate_Time">Date and Time</string>
    <string name="comp_info">Competition</string>
    <string name="matchTeams">Teams</string>
    <string name="vs">vs.</string>
    <string name="home">Home</string>
    <string name="away">Away</string>
    <string name="username">Username</string>
    <string name="swipe">Swipe to Update</string>
    <string name="posession">Posession</string>
    <string name="points">Point</string>
    <string name="goals">Goal</string>
    <string name="yellow">Yellow Cards</string>
    <string name="red">Red Cards</string>
    <string name="contribute">Contribute</string>
    <string name="common">Update Match</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="missile">Fire Missile</string>
    <string name="fire">Fire</string>
    <string name="cancel">Cancel</string>
    <string name="addPlayer">Add Player</string>
    <string name="split">|</string>
    <string name="mins">Minutes</string>
    <string name="end_match">End Match</string>

</resources>
