<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

   	<EditText
        android:id="@+id/player1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/goalie"
        android:inputType="textPersonName" >

    </EditText>

    <EditText
        android:id="@+id/player2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/rcb"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/player3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/mf"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/player4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/rwf"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/player5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/ff"
        android:inputType="textPersonName" />
    
    <Button
        android:id="@+id/createPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterPlayers" />

</LinearLayout>