<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
    android:layout_height="match_parent" 
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/startMatch"
            android:layout_width="wrap_content"
            android:layout_height="78dp"
            android:background="@drawable/ic_action_play" 
            android:text="@string/start"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/team1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Team1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/team2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="Team2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/swipeCount"
            android:layout_width="wrap_content"
            android:layout_height="196dp"
            android:layout_alignParentTop="true"
            android:layout_weight="0.36"
            android:src="@drawable/no0" />

        <Button
            android:id="@+id/pauseButton"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_alignBottom="@+id/swipeCount"
            android:layout_alignParentRight="true"
            android:text="@string/pauseButtonLabel" />


        <TextView
            android:id="@+id/timerValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/pauseButton"
            android:text="@string/timerVal"
            android:textSize="40sp" />

        <Button
            android:id="@+id/butt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pauseButton"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="44dp"
            android:text="Button" />

    </RelativeLayout>

</LinearLayout>
